--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: LMDX
 Type: Package
-Title: An R Implementation of LMDX 
+Title: upgrade your LLM to Layout Aware 
 Version: 0.1.0
-Author@R: c(
-    person("Christophe", "Regouby", email = "christophe.regouby@free.fr", role = "ctb")
+Authors@R: c(
+    person("Christophe", "Regouby", email = "christophe.regouby@free.fr", role = c("aut", "cre"))
   )
 Maintainer: Christophe Regouby <christophe.regouby@free.fr>
 Description: LMDX turn a text language model into a document language model.
@@ -11,3 +11,11 @@ Description: LMDX turn a text language model into a document language model.
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
+Imports: 
+  chattr,
+  dplyr,
+  purrr
+Suggests: testthat, fs, glue
+URL: https://github.com/cregouby/LMDX/
+BugReports: https://github.com/cregouby/LMDX/issues
+RoxygenNote: 7.2.3
