--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,10 +7,13 @@ export(lmdx_document)
 export(lmdx_prompt)
 export(lmdx_task)
 export(pivot_longer_to_segment)
+export(remove_layout)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,accross)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,summarize)
+importFrom(dplyr,where)
 importFrom(glue,glue)
 importFrom(pdftools,pdf_data)
 importFrom(purrr,map)
