add the "font" segmentation method add README fix typo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,12 +9,15 @@ export(lmdx_task)
 export(pivot_longer_to_segment)
 export(remove_layout)
 importFrom(dplyr,"%>%")
-importFrom(dplyr,accross)
+importFrom(dplyr,across)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,summarize)
+importFrom(dplyr,summarize_all)
 importFrom(dplyr,where)
 importFrom(glue,glue)
 importFrom(pdftools,pdf_data)
 importFrom(purrr,map)
+importFrom(purrr,map_chr)
+importFrom(purrr,map_dfr)
 importFrom(tidyr,replace_na)
