--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ export(remove_layout)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
 importFrom(dplyr,group_by)
+importFrom(dplyr,lag)
+importFrom(dplyr,lead)
 importFrom(dplyr,mutate)
 importFrom(dplyr,summarize)
 importFrom(dplyr,summarize_all)
