--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,11 @@
 S3method(lmdx_task,character)
 S3method(lmdx_task,default)
 S3method(lmdx_task,json)
+export(decode_all_sample)
 export(lmdx_document)
 export(lmdx_prompt)
 export(lmdx_task)
+export(majority_vote)
 export(pivot_longer_to_segment)
 export(remove_layout)
 importFrom(dplyr,"%>%")
