--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(lmdx_prompt)
 export(lmdx_task)
 export(majority_vote)
 export(pivot_longer_to_segment)
+export(pivot_to_short_segment)
 export(remove_layout)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
@@ -21,6 +22,7 @@ importFrom(dplyr,summarize_all)
 importFrom(dplyr,where)
 importFrom(glue,glue)
 importFrom(pdftools,pdf_data)
+importFrom(purrr,flatten_dfc)
 importFrom(purrr,map)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_dfr)
