--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,8 @@
 S3method(lmdx_task,character)
 S3method(lmdx_task,default)
 S3method(lmdx_task,json)
-export(decode_all_sample)
+export(decode_json_result)
+export(decode_yaml_result)
 export(lmdx_document)
 export(lmdx_prompt)
 export(lmdx_task)
@@ -26,4 +27,7 @@ importFrom(purrr,flatten_dfc)
 importFrom(purrr,map)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_dfr)
+importFrom(stringr,str_remove)
+importFrom(stringr,str_remove_all)
+importFrom(stringr,str_replace)
 importFrom(tidyr,replace_na)
