--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,8 @@ importFrom(purrr,flatten_dfc)
 importFrom(purrr,map)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_dfr)
+importFrom(rlang,inform)
+importFrom(rlang,warn)
 importFrom(stringr,str_remove)
 importFrom(stringr,str_remove_all)
 importFrom(stringr,str_replace)
